fix: Potentially fixed overflow issue with footer.

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -9,6 +9,12 @@ body {
     box-sizing: border-box;
 }
 
+.html {
+    max-width: 100%;
+    width: 100%;
+    overflow-x: hidden;
+}
+
 .home-body {
     background-color: white;
     overflow-x: hidden;
@@ -272,10 +278,12 @@ body {
 
 .copyright {
     width: 100%;
+    max-width: 100%;
     display: flex;
     justify-content: space-between;
     background-color: whitesmoke;
     align-items: center;
+    overflow: hidden;
 }
 
 .copyright a {
@@ -372,7 +380,6 @@ body {
     .copyright {
         flex-direction: column;
         text-align: center;
-        padding: 10px;
     }
 
     .copyright p,
